--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "admin",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "login.php",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
